<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/headerText"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/chartsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/main_margin"
        android:background="@null"
        android:contentDescription="@string/charts"
        android:src="@drawable/ic_baseline_bar_chart_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="56dp"
        android:fontFamily="sans-serif"
        android:text="@string/privatBank"
        android:textColor="@color/main"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/calendarPBButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="@dimen/main_margin"
        android:background="@null"
        android:contentDescription="@string/calendar"
        android:src="@drawable/ic_baseline_calendar_today_24"
        app:layout_constraintEnd_toStartOf="@+id/datePBTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/datePBTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="@dimen/main_margin"
        android:textColor="@color/yellow"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/text_style_header_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="24dp"
        android:text="@string/currency"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        style="@style/text_style_header_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/purchase"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <TextView
        style="@style/text_style_header_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/main_margin"
        android:text="@string/sale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <include
        android:id="@+id/eurCurrencyLayout"
        layout="@layout/currency_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:layout_editor_absoluteX="@dimen/main_margin" />

    <include
        android:id="@+id/usdCurrencyLayout"
        layout="@layout/currency_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin"
        app:layout_constraintTop_toBottomOf="@+id/eurCurrencyLayout"
        tools:layout_editor_absoluteX="@dimen/main_margin" />

    <include
        android:id="@+id/rubCurrencyLayout"
        layout="@layout/currency_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/main_margin"
        app:layout_constraintTop_toBottomOf="@+id/usdCurrencyLayout"
        tools:layout_editor_absoluteX="@dimen/main_margin" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_margin"
        android:layout_marginTop="@dimen/main_margin"
        android:text="@string/nbu"
        android:textColor="@color/main"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rubCurrencyLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/nbuCurrenciesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginHorizontal="@dimen/main_margin"
        android:layout_marginTop="10dp"
        android:paddingBottom="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>